--- a/hutil.cabal
+++ b/hutil.cabal
@@ -62,7 +62,7 @@ library
     import:           warnings
 
     -- Modules exported by the library.
-    exposed-modules:  MyLib
+    exposed-modules:  Grid
 
     -- Modules included in this library but not exported.
     -- other-modules:
@@ -71,7 +71,9 @@ library
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.18.3.0
+    build-depends:
+        base ^>=4.18.3.0,
+        vector ^>=0.13.2
 
     -- Directories containing source files.
     hs-source-dirs:   src
