--- a/hutil.cabal
+++ b/hutil.cabal
@@ -62,7 +62,7 @@ library
     import:           warnings
 
     -- Modules exported by the library.
-    exposed-modules:  Grid
+    exposed-modules:  Grid, Search
 
     -- Modules included in this library but not exported.
     -- other-modules:
@@ -73,6 +73,7 @@ library
     -- Other library packages from which modules are imported.
     build-depends:
         base ^>=4.18.3.0,
+        containers ^>=0.8,
         vector ^>=0.13.2
 
     -- Directories containing source files.
