--- a/hutil.cabal
+++ b/hutil.cabal
@@ -62,7 +62,7 @@ library
     import:           warnings
 
     -- Modules exported by the library.
-    exposed-modules:  Grid, Search
+    exposed-modules:  Grid, Search, PQueue
 
     -- Modules included in this library but not exported.
     -- other-modules:
