--- a/hutil.cabal
+++ b/hutil.cabal
@@ -90,7 +90,7 @@ test-suite hutil-test
     default-language: Haskell2010
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules: GridSpec
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -102,9 +102,10 @@ test-suite hutil-test
     hs-source-dirs:   test
 
     -- The entrypoint to the test suite.
-    main-is:          Main.hs
+    main-is:          Spec.hs
 
     -- Test dependencies.
     build-depends:
         base ^>=4.18.3.0,
+        hspec ^>= 2.11.14,
         hutil
