--- a/hutil.cabal
+++ b/hutil.cabal
@@ -90,7 +90,7 @@ test-suite hutil-test
     default-language: Haskell2010
 
     -- Modules included in this executable, other than Main.
-    other-modules: GridSpec
+    other-modules: GridSpec, PQueueSpec
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
