--- a/hutil.cabal
+++ b/hutil.cabal
@@ -90,7 +90,7 @@ test-suite hutil-test
     default-language: Haskell2010
 
     -- Modules included in this executable, other than Main.
-    other-modules: GridSpec, PQueueSpec
+    other-modules: GridSpec, PQueueSpec, SearchSpec
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -107,5 +107,6 @@ test-suite hutil-test
     -- Test dependencies.
     build-depends:
         base ^>=4.18.3.0,
+        containers ^>=0.8,
         hspec ^>= 2.11.14,
         hutil
